fix: Do NOT output anything in ZSH/Bash non-login shell to avoud `rsync error: protocol incompatibility (code 2)`

--- a/meta/configs/bash.yaml
+++ b/meta/configs/bash.yaml
@@ -5,12 +5,13 @@
       force: true
 - clean:
     - ~/.config/bash
+    - ~/.config/bash/.bash_prompt # WORKAROUND for ssh tput: `No value for $TERM and no -T specified`
 - link:
     ~/.bashrc: shells/bash/bashrc
     ~/.inputrc: shells/bash/inputrc
     ~/.bash_profile: shells/bash/bash_profile
     ~/.bash_aliases: shells/bash/bash_aliases
-    ~/.config/bash/.bash_prompt: shells/bash/config/bash/bash_prompt
+    # ~/.config/bash/.bash_prompt: shells/bash/config/bash/bash_prompt
     ~/.config/bash/sensible.bash: shells/bash/config/bash/sensible.bash
     ~/.config/bash/bashmarks.sh: shells/bash/config/bash/bashmarks.sh
 
