feat: Support AlmaLinux 8/9 use same profile as Rocky Linux

--- a/meta/configs/brew.yaml
+++ b/meta/configs/brew.yaml
@@ -4,9 +4,16 @@
       relink: true
       force: true
 
+# Install common dependencies
+- brew:
+    - ca-certificates
+    - glibc
+    - gcc
+    - make      # Require for ble.sh and ruby-build
+    - wget
+
 # See https://nixos-and-flakes.thiscute.world/nixos-with-flakes/start-using-home-manager
 - brew:
-    - lsd       # `ls` tool replace `exa` (Error: exa has been disabled because it is not maintained upstream!)
     - lsof      # list open files, requires for Zinit's plugin caarlos0/ports
     - fzf
     - fastfetch
@@ -27,9 +34,6 @@
     - xsv       # Fast CSV toolkit written in Rust
     - jq
     - git
-    - wget
-    - ca-certificates
-    - make      # Require for ble.sh and ruby-build
 
 - link:
     ~/.screenrc: apps/screen/screenrc
