feat: Support all Debian distros (tested 9-stretch and 12-bookworm latest stable)

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "meta/dotbot-dnf"]
 	path = meta/dotbot-dnf
 	url = https://github.com/rbrauner/dotbot-dnf.git
+[submodule "meta/dotbot-if"]
+	path = meta/dotbot-if
+	url = https://github.com/wonderbeyond/dotbot-if.git
