--- a/meta/configs/apt.debian.yaml
+++ b/meta/configs/apt.debian.yaml
@@ -14,6 +14,7 @@
     - python3-pip
     - ruby
     - python3-openssl
+    - software-properties-common # For install PPA, see https://askubuntu.com/questions/422975/e-package-python-software-properties-has-no-installation-candidate
 
 - aptget:
     - >-
@@ -27,3 +28,9 @@
     # This fix `curl: (60) server certificate verification failed. CAfile: /etc/ssl/certs/ca-certificates.crt CRLfile: none` when use `brew install` on Ubuntu 16.04
     # See https://www.zoocha.com/news/fixing-issues-multiple-servers-caused-recently-expired-root-certificate
     - libgnutls-openssl27
+
+- aptget:
+
+    # Need for `az login` interactive
+    wslu:
+      ppa_source: 'ppa:wslutilities/wslu'
